--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,18 @@
 ---
-# defaults file for jetty
+java_version:             1.8
+jetty_version_major:      9
+jetty_version_minor:      4
+jetty_version_patch:      6
+jetty_version_build:      "v20170531"
+jetty_version:            "{{ jetty_version_major }}.{{ jetty_version_minor }}.{{ jetty_version_patch }}.{{ jetty_version_build }}"
+jetty_download_dir:       "{{ ansible_env.HOME}}"
+jetty_install_dir:        "/usr/local"
+jetty_dir:                "jetty-distribution-{{ jetty_version }}"
+jetty_download_file:      "{{ jetty_dir }}.tar.gz"
+jetty_url:                "http://central.maven.org/maven2/org/eclipse/jetty/jetty-distribution/{{ jetty_version }}/{{ jetty_download_file }}"
+jetty_checksum_algorithm: "sha1"
+jetty_checksum_url:       "{{ jetty_url }}.{{ jetty_checksum_algorithm }}"
+jetty_user:               "jetty"
+jetty_group:              "{{ jetty_user }}"
+jetty_home:               "{{ jetty_install_dir }}/jetty"
+jetty_base:               "/opt/jetty"
