--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
-# handlers file for jetty
+- name: restart jetty
+  systemd:
+    name: "jetty"
+    daemon_reload: yes
+    enabled: yes
+    state: restarted
+  become: true
