Update jetty_url to something that works.
The current value of jetty_url `http://central.maven.org/maven2/org/eclipse/jetty/jetty-distribution/` is defunct. 
Maybe it also makes sense to update the version of jetty? The latest is: 9.4.38.v20210224.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,7 +9,7 @@ jetty_download_dir:       "{{ ansible_env.HOME}}"
 jetty_install_dir:        "/usr/local"
 jetty_dir:                "jetty-distribution-{{ jetty_version }}"
 jetty_download_file:      "{{ jetty_dir }}.tar.gz"
-jetty_url:                "http://central.maven.org/maven2/org/eclipse/jetty/jetty-distribution/{{ jetty_version }}/{{ jetty_download_file }}"
+jetty_url:                "https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-distribution/{{ jetty_version }}/{{ jetty_download_file }}"
 jetty_checksum_algorithm: "sha1"
 jetty_checksum_url:       "{{ jetty_url }}.{{ jetty_checksum_algorithm }}"
 jetty_user:               "jetty"
